--- a/E-commerceProject/package.json
+++ b/E-commerceProject/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-session": "^2.1.0",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
   }
